examples/test/testpolicy18045.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18045
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key3: value20
      key23: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value35
      podSelector:
        matchLabels:
          key16: value34
          key11: value45
          key30: value32
